--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
-    "noImplicitReturns": true,
+    "noImplicitReturns": false, //sua
+    "strictPropertyInitialization": false, //sua
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
     "declaration": false,
