--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitOverride": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false, //sua true to false
     "noImplicitReturns": false, //sua
     "strictPropertyInitialization": false, //sua
     "noFallthroughCasesInSwitch": true,
