--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "angular-code-input": "^1.6.0",
     "animejs": "^3.2.1",
     "chart.js": "^3.1.1",
     "rxjs": "~7.8.0",
