--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ng-angular-popup": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "http-server-spa": "^3.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.5",
